Fixed Drug Price List

--- a/public/assets/views/hmo/clients-partials/pharmacy/refferal.html
+++ b/public/assets/views/hmo/clients-partials/pharmacy/refferal.html
@@ -17,7 +17,7 @@
                                     <tr>
                                         <th class="width-50 hidden-xs hidden-sm"></th>
                                         <th>Enrollee</th>
-                                        <th>Hospital</th>
+                                        <th>Pharmacy</th>
                                         <th>Why</th>
                                         <th>Date</th>
                                     </tr>
@@ -37,8 +37,8 @@
                                                 <span class="block">Jane Doe</span><span class="label label-success">active</span>
                                             </a>
                                         </td>
-                                        <td class="hidden-xs hidden-sm">Beko Hospitals</td>
-                                        <td class="hidden-xs hidden-sm">Special Surgery Needed</td>
+                                        <td class="hidden-xs hidden-sm">Kistro Pharmacy</td>
+                                        <td class="hidden-xs hidden-sm">For NZT purchase</td>
                                         <td class="hidden-xs hidden-sm">17-09-2016</td>
                                     </tr>
                                     <tr>
@@ -54,8 +54,8 @@
                                                 <span class="block">John Doe</span><span class="label label-danger">inactive</span>
                                             </a>
                                         </td>
-                                        <td class="hidden-xs hidden-sm">Beko Hospitals</td>
-                                        <td class="hidden-xs hidden-sm">Special Surgery Needed</td>
+                                        <td class="hidden-xs hidden-sm">Kistro Pharmacy</td>
+                                        <td class="hidden-xs hidden-sm">For NZT purchase</td>
                                         <td class="hidden-xs hidden-sm">17-09-2016</td>
                                     </tr>
                                     <tr>
@@ -70,8 +70,8 @@
                                                 <letter-icon data-icon="fa fa-user" class="pull-left margin-right-10" box="round" color="#ED5952" color-hover="#E62117"></letter-icon>
                                                 <span class="block">Ben Murray</span><span class="label label-danger">inactive</span>
                                             </a></td>
-                                        <td class="hidden-xs hidden-sm">Beko Hospitals</td>
-                                        <td class="hidden-xs hidden-sm">Special Surgery Needed</td>
+                                        <td class="hidden-xs hidden-sm">Kistro Pharmacy</td>
+                                        <td class="hidden-xs hidden-sm">For NZT purchase</td>
                                         <td class="hidden-xs hidden-sm">17-09-2016</td>
                                     </tr>
                                     <tr>
@@ -86,8 +86,8 @@
                                                 <letter-icon data-icon="fa fa-user" class="pull-left margin-right-10" box="round" color="#8BC33E" color-hover="#7CB549"></letter-icon>
                                                 <span class="block">JDon Nolan</span><span class="label label-danger">inactive</span>
                                             </a></td>
-                                        <td class="hidden-xs hidden-sm">Beko Hospitals</td>
-                                        <td class="hidden-xs hidden-sm">Special Surgery Needed</td>
+                                        <td class="hidden-xs hidden-sm">Kistro Pharmacy</td>
+                                        <td class="hidden-xs hidden-sm">For NZT purchase</td>
                                         <td class="hidden-xs hidden-sm">17-09-2016</td>
                                     </tr>
                                     </tbody>
@@ -97,13 +97,13 @@
                             <uib-tab heading="Outgoing" class="padding-top-5">
                                 <table class="table no-margin">
                                     <thead>
-                                        <tr>
-                                            <th class="width-50 hidden-xs hidden-sm"></th>
-                                            <th>Enrollee</th>
-                                            <th>Hospital</th>
-                                            <th>Why</th>
-                                            <th>Date</th>
-                                        </tr>
+                                    <tr>
+                                        <th class="width-50 hidden-xs hidden-sm"></th>
+                                        <th>Enrollee</th>
+                                        <th>Pharmacy</th>
+                                        <th>Why</th>
+                                        <th>Date</th>
+                                    </tr>
                                     </thead>
                                     <tbody>
                                     <tr>
@@ -120,8 +120,8 @@
                                                 <span class="block">Jane Doe</span><span class="label label-success">active</span>
                                             </a>
                                         </td>
-                                        <td class="hidden-xs hidden-sm">Beko Hospitals</td>
-                                        <td class="hidden-xs hidden-sm">Special Surgery Needed</td>
+                                        <td class="hidden-xs hidden-sm">Kistro Pharmacy</td>
+                                        <td class="hidden-xs hidden-sm">For NZT purchase</td>
                                         <td class="hidden-xs hidden-sm">17-09-2016</td>
                                     </tr>
                                     <tr>
@@ -137,8 +137,8 @@
                                                 <span class="block">John Doe</span><span class="label label-danger">inactive</span>
                                             </a>
                                         </td>
-                                        <td class="hidden-xs hidden-sm">Beko Hospitals</td>
-                                        <td class="hidden-xs hidden-sm">Special Surgery Needed</td>
+                                        <td class="hidden-xs hidden-sm">Kistro Pharmacy</td>
+                                        <td class="hidden-xs hidden-sm">For NZT purchase</td>
                                         <td class="hidden-xs hidden-sm">17-09-2016</td>
                                     </tr>
                                     <tr>
@@ -153,8 +153,8 @@
                                                 <letter-icon data-icon="fa fa-user" class="pull-left margin-right-10" box="round" color="#ED5952" color-hover="#E62117"></letter-icon>
                                                 <span class="block">Ben Murray</span><span class="label label-danger">inactive</span>
                                             </a></td>
-                                        <td class="hidden-xs hidden-sm">Beko Hospitals</td>
-                                        <td class="hidden-xs hidden-sm">Special Surgery Needed</td>
+                                        <td class="hidden-xs hidden-sm">Kistro Pharmacy</td>
+                                        <td class="hidden-xs hidden-sm">For NZT purchase</td>
                                         <td class="hidden-xs hidden-sm">17-09-2016</td>
                                     </tr>
                                     <tr>
@@ -169,8 +169,8 @@
                                                 <letter-icon data-icon="fa fa-user" class="pull-left margin-right-10" box="round" color="#8BC33E" color-hover="#7CB549"></letter-icon>
                                                 <span class="block">JDon Nolan</span><span class="label label-danger">inactive</span>
                                             </a></td>
-                                        <td class="hidden-xs hidden-sm">Beko Hospitals</td>
-                                        <td class="hidden-xs hidden-sm">Special Surgery Needed</td>
+                                        <td class="hidden-xs hidden-sm">Kistro Pharmacy</td>
+                                        <td class="hidden-xs hidden-sm">For NZT purchase</td>
                                         <td class="hidden-xs hidden-sm">17-09-2016</td>
                                     </tr>
                                     </tbody>
