--- a/public/assets/views/hmo/pharmacy.html
+++ b/public/assets/views/hmo/pharmacy.html
@@ -20,6 +20,7 @@
                     <!-- end: TAB OVERVIEW -->
                     <!-- start: TAB EDIT ACCOUNT -->
                     <uib-tab heading="Referral">
+                        <ng-include src=" 'assets/views/hmo/clients-partials/pharmacy/refferal.html' "></ng-include>
                     </uib-tab>
 
 
