--- a/public/assets/views/hmo/settings.html
+++ b/public/assets/views/hmo/settings.html
@@ -27,6 +27,7 @@
                     <!-- end: TAB PROJECTS -->
 
                     <uib-tab heading="Drug Price List">
+                        <ng-include src=" 'assets/views/hmo/clients-partials/settings/drug-list.html' "></ng-include>
                     </uib-tab>
 
                     <uib-tab heading="Claims Price List">
