--- a/public/assets/views/hmo/clients-partials/pharmacy/care-distribution.html
+++ b/public/assets/views/hmo/clients-partials/pharmacy/care-distribution.html
@@ -35,7 +35,7 @@
                             <!-- add expanded attribute to open first section -->
                             <v-pane expanded>
                                 <v-pane-header>
-                                    Primary
+                                    Drug Distribution
                                 </v-pane-header>
                                 <v-pane-content>
                                     <table class="table margin-bottom-5">
@@ -63,68 +63,7 @@
                                         </tbody>
                                     </table>
                                 </v-pane-content>
-                                <v-pane>
-                                    <v-pane-header>
-                                        Secondary
-                                    </v-pane-header>
-                                    <v-pane-content>
-                                        <table class="table margin-bottom-5">
-                                            <tbody>
-                                            <tr>
-                                                <td><strong>Drug</strong></td>
-                                                <td class="center"><strong>Amount (N)</strong></td>
-                                                <td class="center"><strong>Count</strong></td>
-                                            </tr>
-                                            <tr>
-                                                <td>NZT24</td>
-                                                <td class="center">521,000</td>
-                                                <td class="center">17</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Novalgin</td>
-                                                <td class="center">1,300,000</td>
-                                                <td class="center">120</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Malaria Vaccine</td>
-                                                <td class="center">230,000</td>
-                                                <td class="center">4</td>
-                                            </tr>
-                                            </tbody>
-                                        </table>
-                                    </v-pane-content>
-                                </v-pane>
-                                <v-pane>
-                                    <v-pane-header>
-                                        Tertiary
-                                    </v-pane-header>
-                                    <v-pane-content>
-                                        <table class="table margin-bottom-5">
-                                            <tbody>
-                                            <tr>
-                                                <td><strong>Drug</strong></td>
-                                                <td class="center"><strong>Amount (N)</strong></td>
-                                                <td class="center"><strong>Count</strong></td>
-                                            </tr>
-                                            <tr>
-                                                <td>NZT24</td>
-                                                <td class="center">521,000</td>
-                                                <td class="center">17</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Novalgin</td>
-                                                <td class="center">1,300,000</td>
-                                                <td class="center">120</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Malaria Vaccine</td>
-                                                <td class="center">230,000</td>
-                                                <td class="center">4</td>
-                                            </tr>
-                                            </tbody>
-                                        </table>
-                                    </v-pane-content>
-                                </v-pane>
+                            </v-pane>
                         </v-accordion>
                     </div>
                 </div>
