--- a/public/assets/views/hmo/clients-partials/settings/editRow.html
+++ b/public/assets/views/hmo/clients-partials/settings/editRow.html
@@ -24,7 +24,7 @@
         </td>
         <td colspan="2">
             <div class="pull-right">
-                <input type="button" class="btn btn-primary btn-sm margin-right-15" value=" save " onclick="alert('Save :)')">
+                <input type="button" class="btn btn-primary btn-sm margin-right-15" value=" save " ng-click="saveDrug()">
                 <input type="button" class="btn btn-primary btn-sm" value=" cancel" ng-click="setEditId(-1)">
             </div>
         </td>
