working on claims price list

--- a/public/assets/views/hmo/settings.html
+++ b/public/assets/views/hmo/settings.html
@@ -31,6 +31,7 @@
                     </uib-tab>
 
                     <uib-tab heading="Claims Price List">
+                        <ng-include src=" 'assets/views/hmo/clients-partials/settings/claims-price.html' "></ng-include>
                     </uib-tab>
 
 
