--- a/public/assets/views/hmo/reports-enrollee.html
+++ b/public/assets/views/hmo/reports-enrollee.html
@@ -28,7 +28,7 @@
                         <tbody>
                         <tr>
                             <td class="center">1</td>
-                            <td class="hidden-xs">Jane Doe</td>
+                            <td class="hidden-xs"><a href="#" ng-click="openAside('top', 'approved')">Jane Doe</a></td>
                             <td>Typhoid</td>
                             <td><a href="#" rel="nofollow" target="_blank"> Inlad Medicals </a></td>
                             <td><a href="#" rel="nofollow" target="_blank"> ---- </a></td>
@@ -38,7 +38,7 @@
                         </tr>
                         <tr>
                             <td class="center">2</td>
-                            <td>Mike Lawson</td>
+                            <td><a href="#" ng-click="openAside('top', 'pending')">Mike Lawson</a></td>
                             <td class="hidden-xs">Syphilis</td>
                             <td><a href="#" rel="nofollow" target="_blank">Beko Hospitals </a></td>
                             <td><a href="#" rel="nofollow" target="_blank">Beko Pharmacy </a></td>
@@ -48,7 +48,7 @@
                         </tr>
                         <tr>
                             <td class="center">3</td>
-                            <td class="hidden-xs">Jane Doe</td>
+                            <td class="hidden-xs"><a href="#" ng-click="openAside('top', 'not_approved')">Jane Doe</a></td>
                             <td>Typhoid</td>
                             <td><a href="#" rel="nofollow" target="_blank"> Inlad Medicals </a></td>
                             <td><a href="#" rel="nofollow" target="_blank"> ---- </a></td>
@@ -58,7 +58,7 @@
                         </tr>
                         <tr>
                             <td class="center">4</td>
-                            <td>Mike Lawson</td>
+                            <td><a href="#" ng-click="openAside('top', 'pending')">Mike Lawson</a></td>
                             <td class="hidden-xs">Syphilis</td>
                             <td><a href="#" rel="nofollow" target="_blank">Beko Hospitals </a></td>
                             <td><a href="#" rel="nofollow" target="_blank">Beko Pharmacy </a></td>
@@ -68,7 +68,7 @@
                         </tr>
                         <tr>
                             <td class="center">5</td>
-                            <td class="hidden-xs">Jane Doe</td>
+                            <td class="hidden-xs"><a href="#" ng-click="openAside('top', 'not_approved')">Jane Doe</a></td>
                             <td>Typhoid</td>
                             <td><a href="#" rel="nofollow" target="_blank"> Inlad Medicals </a></td>
                             <td><a href="#" rel="nofollow" target="_blank"> ---- </a></td>
@@ -78,7 +78,7 @@
                         </tr>
                         <tr>
                             <td class="center">6</td>
-                            <td>Mike Lawson</td>
+                            <td><a href="#" ng-click="openAside('top', 'pending')">Mike Lawson</a</td>
                             <td class="hidden-xs">Syphilis</td>
                             <td><a href="#" rel="nofollow" target="_blank">Beko Hospitals </a></td>
                             <td><a href="#" rel="nofollow" target="_blank">Beko Pharmacy </a></td>
@@ -93,3 +93,200 @@
         </div>
     </div>
 </div>
+
+<script type="text/ng-template" id="asideContent.html">
+    <div class="modal-header">
+        <h3 class="modal-title"><strong>Jane Doe</strong></h3>
+    </div>
+    <div class="modal-body">
+        <div class="row">
+
+            <div class="col-md-6 col-md-offset-3">
+                <div class="partition-light-grey padding-15 text-center margin-bottom-25">
+                    <h4 class="no-margin">
+                        Full Medical Records
+                        <strong ng-if="pending"><span class="label label-warning pull-right">Pending</span></strong>
+                        <span class="label label-danger pull-right" ng-show="not_approved">Mr Mark disapproved this record</span>
+                        <span class="label label-success pull-right" ng-show="approved">Approved by Ben Carson</span>
+                    </h4>
+                </div>
+                <v-accordion class="vAccordion--default">
+                    <!-- add expanded attribute to open first section -->
+                    <v-pane expanded>
+                        <v-pane-header>
+                            Enrollee Profile
+                        </v-pane-header>
+                        <v-pane-content>
+                            <form role="form" class="form-horizontal">
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label" for="inputPassword3">
+                                        <strong>Status</strong>
+                                    </label>
+                                    <div class="col-sm-3">
+                                        <span class="label label-success">ACTIVE</span>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label" for="inputPassword3">
+                                        <strong>Plan</strong>
+                                    </label>
+                                    <div class="col-sm-3">
+                                        <span class="label label-danger">GOLD</span>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label" for="inputPassword3">
+                                        <strong>Cover Limit</strong>
+                                    </label>
+                                    <div class="col-sm-3">
+                                        <span class="label label-success">N 350,000</span>
+                                    </div>
+                                </div>
+                            </form>
+                        </v-pane-content>
+                        <v-pane>
+                            <v-pane-header>
+                                Diagnosis
+                            </v-pane-header>
+                            <v-pane-content>
+                                <form role="form" class="form-horizontal">
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label" for="inputPassword3">
+                                            <strong>Diagnosis</strong>
+                                        </label>
+                                        <div class="col-sm-4">
+                                            <span class="">Typhoid</span>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label" for="inputPassword3">
+                                            <strong>Summary</strong>
+                                        </label>
+                                        <div class="col-sm-8">
+                                            <div class="well">
+                                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                                Proin risus. Praesent lectus. Vestibulum quam sapien,
+                                                varius ut, blandit non, interdum in, ante. Vestibulum ante
+                                                ipsum primis in faucibus orci luctus et ultrices posuere
+                                                cubilia Curae; Duis faucibus accumsan odio.
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label" for="inputPassword3">
+                                            <strong>Consultant</strong>
+                                        </label>
+                                        <div class="col-sm-3">
+                                            <span class="label partition-green">Dr Mike Dickson</span>
+                                        </div>
+                                    </div>
+                                </form>
+
+                            </v-pane-content>
+                        </v-pane>
+                        <v-pane>
+                            <v-pane-header>
+                                Prescription
+                            </v-pane-header>
+                            <v-pane-content>
+                                <form role="form" class="form-horizontal">
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label" for="inputPassword3">
+                                            <strong>Prescription</strong>
+                                        </label>
+                                        <div class="col-sm-8">
+                                            <div class="well">
+                                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                                Proin risus. Praesent lectus. Vestibulum quam sapien,
+                                                varius ut, blandit non, interdum in, ante. Vestibulum ante
+                                                ipsum primis in faucibus orci luctus et ultrices posuere
+                                                cubilia Curae; Duis faucibus accumsan odio.
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label" for="inputPassword3">
+                                            <strong>Drug Refill ?</strong>
+                                        </label>
+                                        <div class="col-md-2">
+                                            <div class="checkbox clip-check check-primary">
+                                                <input type="checkbox" id="checkbox3" value="1" checked>
+                                                <label for="checkbox3">
+                                                    YES
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <div class="checkbox clip-check check-primary">
+                                                <input type="checkbox" id="checkbox3" value="1">
+                                                <label for="checkbox3">
+                                                    NO
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </v-pane-content>
+                        </v-pane>
+                        <v-pane>
+                            <v-pane-header>
+                                Current Health Status
+                            </v-pane-header>
+                            <v-pane-content>
+                                <form role="form" class="form-horizontal">
+                                    <div class="form-group">
+                                        <div class="col-md-2">
+                                            <div class="checkbox clip-check check-primary">
+                                                <input type="checkbox" id="checkbox3" value="1">
+                                                <label for="checkbox3">
+                                                    Admitted
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <div class="checkbox clip-check check-primary">
+                                                <input type="checkbox" id="checkbox3" value="1" checked>
+                                                <label for="checkbox3">
+                                                    Recovered
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <div class="checkbox clip-check check-primary">
+                                                <input type="checkbox" id="checkbox3" value="1">
+                                                <label for="checkbox3">
+                                                    Died
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <div class="checkbox clip-check check-primary">
+                                                <input type="checkbox" id="checkbox3" value="1">
+                                                <label for="checkbox3">
+                                                    More Check up
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </v-pane-content>
+                        </v-pane>
+                        <v-pane>
+                            <v-pane-header>
+                                Test/Lab Results
+                            </v-pane-header>
+                            <v-pane-content>
+                                <span class="label label-success">None</span>
+                            </v-pane-content>
+                        </v-pane>
+                </v-accordion>
+            </div>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" ng-click="ok($event)">OK</button>
+        <button class="btn btn-primary" ng-click="cancel($event)">Cancel</button>
+    </div>
+</script>
+
