working on new roles

--- a/public/assets/views/hmo/clients-partials/enrollee/medical-history.html
+++ b/public/assets/views/hmo/clients-partials/enrollee/medical-history.html
@@ -184,21 +184,13 @@
         </div>
     </div>
     <div class="panel panel-white space20">
-        <div class="panel-heading">
-            <h4 class="panel-title">Recent Tweets</h4>
+        <div class="panel-heading border-light">
+            <h4 class="panel-title">Treatment Tracker</h4>
         </div>
         <div class="panel-body">
-            <ul class="ltwt">
-                <li class="ltwt_tweet">
-                    <p class="ltwt_tweet_text">
-                        <a href class="text-info">
-                            @Shakespeare
-                        </a>
-                        Some are born great, some achieve greatness, and some have greatness thrust upon them.
-                    </p>
-                    <span class="block text-light"><i class="fa fa-fw fa-clock-o"></i> 2 minuts ago</span>
-                </li>
-            </ul>
+            <span class="block text-light"><i class="fa fa-fw fa-clock-o"></i> 12-09-2016 :  Drug Refill at Inlad Medicals</span>
+            <span class="block text-light"><i class="fa fa-fw fa-clock-o"></i> 18-09-2016 :  Drug Refill at Inlad Medicals</span>
+            <span class="block text-light"><i class="fa fa-fw fa-clock-o"></i> 21-09-2016 :  Glasses lens Replacement</span>
         </div>
     </div>
 </div>
