--- a/public/assets/views/auth/login.html
+++ b/public/assets/views/auth/login.html
@@ -1,17 +1,11 @@
 <!-- start: LOGIN -->
 <div class="row">
     <div class="main-login col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4 col-lg-2 col-lg-offset-5">
-        <div class="logo text-center">
-            <img src="assets/images/logo-big.png" alt="{{app.name}}" class="img-responsive" />
-        </div>
-        <p class="text-center text-dark text-bold text-extra-large margin-top-15">
-            Welcome to Packet
-        </p>
+        <h2 class="text-center">
+            HealthPlus
+        </h2>
         <p class="text-center">
-            You can build just about any type of dashboard you want with Packet, a developer friendly admin theme.
-        </p>
-        <p class="text-center">
-            Please enter your name and password to log in.
+            Please enter your email and password to log in.
         </p>
         <!-- start: LOGIN BOX -->
         <div class="box-login">
