--- a/public/assets/views/partials/sidebar.html
+++ b/public/assets/views/partials/sidebar.html
@@ -56,6 +56,12 @@
 <div ng-if="currentUser.data.role.data.name == 'admin'">
     <nav data-ng-include=" 'assets/views/partials/hmo/nav-hmo.html' "></nav>
 </div>
+<div ng-if="currentUser.data.role.data.name == 'analyst'">
+    <nav data-ng-include=" 'assets/views/partials/hmo/nav-hmo.html' "></nav>
+</div>
+<div ng-if="currentUser.data.role.data.name == 'director'">
+    <nav data-ng-include=" 'assets/views/partials/hmo/nav-hmo.html' "></nav>
+</div>
 <div ng-if="currentUser.data.role.data.name == 'claims'">
     <nav data-ng-include=" 'assets/views/partials/hmo/nav-claims.html' "></nav>
 </div>
