--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -20,3 +20,28 @@
 .font-10{
     font-size: 10px !important;
 }
+
+.treasure-overlay-spinner-container{
+    z-index: 100000 !important;
+}
+
+.panel-heading{
+    background-color: #f7f7f8;
+}
+
+.icon-error{
+    color: #d80000;
+    font-size: 20px;
+    margin-top: 6px
+}
+
+.icon-success{
+    color: #0ead1a;
+    font-size: 20px;
+    margin-top: 6px
+}
+
+.danger-gradient{
+    background-color: #D64242;
+    background-image: linear-gradient(to left top,rgba(243,122,101,0) 0,#f37a65 100%);
+}
