--- a/public/assets/css/morphModal.css
+++ b/public/assets/css/morphModal.css
@@ -1,183 +1,200 @@
-/* --------------------------------
+::-moz-selection { background: #fd625e; color: #fff; text-shadow: none; }
+::selection { background: #fd625e; color: #fff; text-shadow: none; }
 
-Main Components
 
--------------------------------- */
-.cd-section {
-    padding: 2em 5%;
-    text-align: center;
-    background-color: #457eff; }
-.cd-section p {
-    margin: 2em 0;
-    line-height: 1.6;
-    color: white;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale; }
-@media only screen and (min-width: 768px) {
-    .cd-section {
-        padding: 4em 10%; }
-    .cd-section p {
-        font-size: 1.8rem;
-        line-height: 2; } }
-@media only screen and (min-width: 1170px) {
-    .cd-section {
-        padding: 4em 20%; } }
-
-.cd-modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none;
-    -moz-transition: visibility 0s 0.3s, opacity 0.3s 0s, z-index 0s 0.3s;
-    -o-transition: visibility 0s 0.3s, opacity 0.3s 0s, z-index 0s 0.3s;
-    -webkit-transition: visibility 0s 0.3s, opacity 0.3s 0s, z-index 0s 0.3s;
-    transition: visibility 0s 0.3s, opacity 0.3s 0s, z-index 0s 0.3s; }
-.cd-modal::after {
-    /* gradient overlay at bottom of modal window */
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    pointer-events: none;
-    background: transparent;
-    background-image: url(./images/linear-gradient(to top, #34383c, rgba(52, 56, 60, 0))/file.png);
-    background-repeat: no-repeat;
-    background-position: 0px 0px; }
-.cd-modal .cd-modal-content {
-    height: 100%;
-    width: 100%;
-    padding: 3em 5%;
-    text-align: left;
-    overflow-y: auto;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale; }
-.cd-modal p {
-    color: white;
-    line-height: 1.6;
-    margin: 2em 0; }
-.modal-is-visible .cd-modal {
-    z-index: 1;
-    visibility: visible;
-    opacity: 1;
-    pointer-events: auto;
-    -moz-transition: visibility 0s 0s, opacity 0.3s 0s, z-index 0s 0s;
-    -o-transition: visibility 0s 0s, opacity 0.3s 0s, z-index 0s 0s;
-    -webkit-transition: visibility 0s 0s, opacity 0.3s 0s, z-index 0s 0s;
-    transition: visibility 0s 0s, opacity 0.3s 0s, z-index 0s 0s; }
-.modal-is-visible .cd-modal .cd-modal-content {
-    -webkit-overflow-scrolling: touch; }
-@media only screen and (min-width: 768px) {
-    .cd-modal .cd-modal-content {
-        padding: 4em 10%; } }
-@media only screen and (min-width: 1170px) {
-    .cd-modal .cd-modal-content {
-        padding: 6em 20%; }
-    .cd-modal p {
-        font-size: 2rem;
-        line-height: 2; } }
-
-.cd-modal-action {
-    position: relative; }
-.cd-modal-action .btn-morph, .cd-modal-action .cd-modal-bg {
+.btn-link-1 {
     display: inline-block;
-    height: 4em;
-    background-color: #34383c; }
-.cd-modal-action .btn-morph {
-    width: 12.5em;
-    border-radius: 5em;
-    color: white;
-    line-height: 4em;
-    white-space: nowrap;
-    font-weight: 700;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -moz-transition: color 0.2s 0.3s, width 0.3s 0s;
-    -o-transition: color 0.2s 0.3s, width 0.3s 0s;
-    -webkit-transition: color 0.2s 0.3s, width 0.3s 0s;
-    transition: color 0.2s 0.3s, width 0.3s 0s; }
-.cd-modal-action .btn-morph.to-circle {
-    width: 4em;
-    color: transparent;
-    -moz-transition: color 0.2s 0s, width 0.3s 0.2s;
-    -o-transition: color 0.2s 0s, width 0.3s 0.2s;
-    -webkit-transition: color 0.2s 0s, width 0.3s 0.2s;
-    transition: color 0.2s 0s, width 0.3s 0.2s; }
-.cd-modal-action .cd-modal-bg {
-    position: absolute;
-    z-index: 1;
-    left: 50%;
-    top: 0;
-    width: 4em;
-    border-radius: 50%;
-    opacity: 0;
-    visibility: hidden;
-    -moz-transform: translateZ(0);
-    -o-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    -moz-transform: translateX(-2em);
-    -o-transform: translateX(-2em);
-    -ms-transform: translateX(-2em);
-    -webkit-transform: translateX(-2em);
-    transform: translateX(-2em);
-    -moz-transition: visibility 0s 0.5s;
-    -o-transition: visibility 0s 0.5s;
-    -webkit-transition: visibility 0s 0.5s;
-    transition: visibility 0s 0.5s; }
-.cd-modal-action .cd-modal-bg.is-visible {
-    opacity: 1;
-    visibility: visible; }
-
-.cd-modal-close {
-    position: fixed;
-    z-index: 9999;
-    top: 20px;
-    right: 5%;
     height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    background: rgba(0, 0, 0, 0.3) url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/cd-icon-close_copy.svg) no-repeat center center;
-    /* image replacement */
-    overflow: hidden;
-    text-indent: 100%;
-    white-space: nowrap;
-    visibility: hidden;
-    opacity: 0;
-    -moz-transform: translateZ(0);
-    -o-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    -moz-transform: scale(0);
-    -o-transform: scale(0);
-    -ms-transform: scale(0);
-    -webkit-transform: scale(0);
-    transform: scale(0);
-    -moz-transition: transform 0.3s 0s, visibility 0s 0.3s, opacity 0.3s 0s;
-    -o-transition: transform 0.3s 0s, visibility 0s 0.3s, opacity 0.3s 0s;
-    -webkit-transition: transform 0.3s 0s, visibility 0s 0.3s, opacity 0.3s 0s;
-    transition: transform 0.3s 0s, visibility 0s 0.3s, opacity 0.3s 0s; }
-.no-touch .cd-modal-close:hover {
-    background-color: rgba(0, 0, 0, 0.5); }
-.modal-is-visible .cd-modal-close {
-    visibility: visible;
+    margin: 0 5px;
+    padding: 16px 20px 0 20px;
+    background: #fd625e;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 16px;
+    color: #fff;
+    -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
+}
+.btn-link-1:hover, .btn-link-1:focus, .btn-link-1:active { outline: 0; opacity: 0.6; color: #fff; }
+
+
+/***** Content *****/
+
+.inner-bg {
+    padding: 120px 0;
+}
+
+.top-content .text {
+    color: #fff;
+}
+
+.top-content .logo {
+    display: inline-block;
+    width: 181px;
+    height: 43px;
+    margin: 0 auto;
+    background: url(../img/logo.png) center center no-repeat;
+}
+
+.top-content .text h1 {
+    margin-top: 30px;
+    color: #fff;
+}
+
+.top-content .description {
+    margin: 20px 0 10px 0;
+}
+
+.top-content .description p { opacity: 0.8; }
+
+.top-content .description a {
+    color: #fff;
+}
+.top-content .description a:hover,
+.top-content .description a:focus { border-bottom: 1px dotted #fff; }
+
+.top-content .top-big-link {
+    margin-top: 45px;
+}
+
+
+/***** Modal *****/
+
+.modal-content {
+    background: #3a3a3a;
+    -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
+    border: 0;
+    text-align: left;
+}
+
+.modal-header {
+    padding: 25px 25px 15px 25px;
+    background: #333;
+    border: 0;
+    -moz-border-radius: 4px 4px 0 0; -webkit-border-radius: 4px 4px 0 0; border-radius: 4px 4px 0 0;
+    color: #888;
+}
+
+.modal-header .close {
+    font-size: 36px;
+    color: #eee;
+    font-weight: 300;
+    text-shadow: none;
     opacity: 1;
-    -moz-transition: transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
-    -o-transition: transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
-    -webkit-transition: transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
-    transition: transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
-    -moz-transform: scale(1);
-    -o-transform: scale(1);
-    -ms-transform: scale(1);
-    -webkit-transform: scale(1);
-    transform: scale(1); }
-@media only screen and (min-width: 768px) {
-    .cd-modal-close {
-        top: 70px; } }
+}
+
+.modal-title {
+    margin-bottom: 10px;
+    line-height: 30px;
+    color: #eee;
+}
+
+.modal-body {
+    padding: 25px 25px 30px 25px;
+    background: #3a3a3a;
+    text-align: left;
+    -moz-border-radius: 0 0 4px 4px; -webkit-border-radius: 0 0 4px 4px; border-radius: 0 0 4px 4px;
+}
+
+.modal-body img {
+    margin-bottom: 15px;
+}
+
+.modal-body form textarea {
+    height: 100px;
+}
+
+.modal-body form .input-error {
+    border-color: #fd625e;
+}
+
+
+/***** Media queries *****/
+
+@media (min-width: 992px) and (max-width: 1199px) {}
+
+@media (min-width: 768px) and (max-width: 991px) {}
+
+@media (max-width: 767px) {
+
+    .top-content .top-big-link { margin-top: 25px; }
+    .top-content .top-big-link a.btn { margin-top: 10px; }
+
+}
+
+@media (max-width: 415px) {
+
+    h1, h2 { font-size: 32px; }
+
+}
+
+
+input[type="text"],
+textarea,
+textarea.form-control {
+    height: 50px;
+    margin: 0;
+    padding: 0 20px;
+    vertical-align: middle;
+    background: #333;
+    border: 1px solid #333;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 50px;
+    color: #888;
+    -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
+    -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none;
+    -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
+}
+
+textarea,
+textarea.form-control {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    line-height: 30px;
+}
+
+input[type="text"]:focus,
+textarea:focus,
+textarea.form-control:focus {
+    outline: 0;
+    background: #444;
+    border: 3px solid #555;
+    -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none;
+}
+
+input[type="text"]:-moz-placeholder, textarea:-moz-placeholder, textarea.form-control:-moz-placeholder { color: #888; }
+input[type="text"]:-ms-input-placeholder, textarea:-ms-input-placeholder, textarea.form-control:-ms-input-placeholder { color: #888; }
+input[type="text"]::-webkit-input-placeholder, textarea::-webkit-input-placeholder, textarea.form-control::-webkit-input-placeholder { color: #888; }
+
+
+
+button.btn {
+    width: 100%;
+    height: 50px;
+    margin: 0;
+    padding: 0 20px;
+    vertical-align: middle;
+    background: #fd625e;
+    border: 0;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 50px;
+    color: #fff;
+    -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
+    text-shadow: none;
+    -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none;
+    -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
+}
+
+button.btn:hover { opacity: 0.6; color: #fff; }
+
+button.btn:active { outline: 0; opacity: 0.6; color: #fff; -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none; }
+
+button.btn:focus { outline: 0; opacity: 0.6; background: #fd625e; color: #fff; }
+
+button.btn:active:focus, button.btn.active:focus { outline: 0; opacity: 0.6; background: #fd625e; color: #fff; }
+
+
+
